# python-mono-repo-starter-kit

./: README.md  docker-compose.yml  main.py  noxfile.py  pre-commit-config.yaml  pyproject.toml
libs/shared/: pyproject.toml
libs/shared/src/shared/: __init__.py  numberUtils.py
services/api-gateway/: main.py
services/api-service/: pyproject.toml
services/api_gateway/: main.py  pyproject.toml
services/archival/: main.py  pyproject.toml
services/cart/: main.py  pyproject.toml
services/config-server/: main.py  pyproject.toml
services/config_server/: main.py
services/inventory/: main.py  pyproject.toml
services/inventory/api/dependencies/: profiles.py
services/inventory/api/routes/: authentication.py  tags.py  users.py
services/inventory/api/routes/articles/: api.py
services/inventory/core/: config.py  events.py
services/inventory/core/settings/: .env  base.py  development.py  production.py  test.py
services/item/: .env  .env.example  main.py  pyproject.toml
services/item-management/: main.py  pyproject.toml
services/item/src/api/dependencies/: articles.py  authentication.py  comments.py  database.py
services/item/src/api/routes/: api.py  comments.py  profiles.py
services/item/src/api/routes/articles/: articles_common.py  articles_resource.py
services/item/src/core/settings/: app.py
services/item/src/db/: events.py
services/item/src/db/migrations/: env.py
services/item/src/db/queries/: queries.py
services/item/src/db/repositories/: articles.py  comments.py  profiles.py  tags.py  users.py
services/item/src/models/domain/: articles.py  comments.py  profiles.py  rwmodel.py  users.py
services/item/src/models/schemas/: articles.py  comments.py  profiles.py  rwschema.py  users.py
services/item/src/services/: articles.py  authentication.py  comments.py  jwt.py
services/item_management/: main.py
services/notification/: main.py  pyproject.toml
services/offers/: main.py  pyproject.toml
services/order/: main.py  pyproject.toml
services/payment/: main.py  pyproject.toml
services/product/: main.py  pyproject.toml
services/recommendations/: main.py  pyproject.toml
services/review-and-ratings/: main.py  pyproject.toml
services/review_and_ratings/: main.py
services/service-discovery/: main.py  pyproject.toml
services/service_discovery/: main.py
services/serviceability/: main.py  pyproject.toml
services/user/: .env  .env.example  main.py  pyproject.toml
services/user/src/: main.py
services/user/src/config/: gunicorn.py  settings.py
services/user/src/models/: user.py
services/user/src/user/: views.py
tests/: test_cli.py
tools/cli/: pyproject.toml
tools/cli/src/cli/: __init__.py  flask_boilerplate.py
