[project]
name = "python-mono-repo-starter-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich",
    "typer-slim[standard]",
    "uvicorn[standard]>=0.40.0",
    "core",
    "shared",
]

[project.scripts]
user = "user.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "services/api-service",
    "services/api-gateway",
    "services/config-server",
    "services/service-discovery",
    "services/user",
    "services/item",
    "services/item-management",
    "services/product",
    "services/review-and-ratings",
    "services/inventory",
    "services/recommendations",
    "services/offers",
    "services/cart",
    "services/order",
    "services/archival",
    "services/notification",
    "services/serviceability",
    "services/payment",
    "libs/shared",
    "packages/core",]

[dependency-groups]
nox = [
    "nox-uv", 
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-randomly",
]

type_check = [
    "mypy",
]

lint = [
    "ruff",
]

docs = [
    "mkdocs-material",
    "mkdocs-htmlproofer-plugin",
    "mkdocstrings[python]",
    "mkdocs-api-autonav",
]

licenses = [
    "pip-licenses-cli",
]

debugging_tool = [
    "pysnooper",
]

[tool.setuptools.packages.find]
where = ["services", "pacakges", "libs"]

[tool.uv.sources]
core = { workspace = true }
shared = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "services/api-service",
    "services/api-gateway",
    "services/config-server",
    "services/service-discovery",
    "services/user",
    "services/item",
    "services/item-management",
    "services/product",
    "services/review-and-ratings",
    "services/inventory",
    "services/recommendations",
    "services/offers",
    "services/cart",
    "services/order",
    "services/archival",
    "services/notification",
    "services/serviceability",
    "services/payment",
    "libs/shared",
    "packages/core",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
enable_error_code = ["deprecated", "exhaustive-match", "explicit-override"]

[tool.ruff]
src = ["services", "pacakges", "libs"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-ignore = [
    "RUF005",
    "RUF012",
]
unfixable = [
    # Disable removing unused imports by default and only enable within nox so editors don't delete
    # unused imports while the user is in the middle of editing a file on save.
    "F401",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false
# For non-src directory projects, explicitly set top level package names:
# known-first-party = ["my-app"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
