[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Avinash Nishad", email = "js.avinash.nishad@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
cli = "cli:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
